--- a/public/styles.css
+++ b/public/styles.css
@@ -116,7 +116,7 @@ a{
 .role{
     color: #4e45d5;
     font-weight: 800px;
-    font-size: 20px;
+    font-size: 40px;
 }
 .hero-section-sub-heading{
     font-size: 45px;
@@ -438,7 +438,7 @@ a{
     font-size: 3vw; /* The font-size will be 3% of the viewport width */
     line-height: 1.5; /* Adjust the line height for better readability */
     text-align: left; /* Center the text */
-    max-width: 20%; /* Ensure the content stays within a reasonable width */
+    max-width: 10%; /* Ensure the content stays within a reasonable width */
   }
   
   
@@ -503,8 +503,8 @@ a{
 }
 .project-number{
     position:absolute;
-    font-size:200px;
-    font-weight:600;
+    font-size:100px;
+    font-weight:400;
     color:white;
     z-index:10;
     /* display:none; */
@@ -547,6 +547,8 @@ a{
     display:flex;
     gap:10px;
     flex-wrap:wrap;
+    align-items: center;
+    justify-content: center;
   
 }
 
@@ -660,23 +662,33 @@ a{
     }
 }
 
- .skills-container{
-    position:relative;
-    display:flex;
-    padding:5rem;
-    margin:7rem 6rem;
-    gap:30px;
-}
+    .skills-container {
+          width: 1200px;
+      display: flex;
+      flex-direction: row;
+      gap: 20px;
+      margin: 3rem 3rem;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+          position: relative;
+            display: flex;
+            padding: 5rem;
+            margin: 7rem 6rem;
+
+    }
 .skill-container-left{
     width:50%;
     display:flex;
     flex-direction:column;
+    margin:auto;
   }
   
 .skill-container-right{
     display:flex;
     flex-wrap:wrap;
     width:50%;
+    margin: auto;
     position:relative;
     gap:4rem;
     justify-content: center;
@@ -722,10 +734,10 @@ a{
 }
   
  .skill-heading{
-    font-size:50px;
+    font-size:60px;
     font-style: bold;
     color: var(--bgOrange);
-    line-height: 50px;
+    line-height: 60px;
 }
   
 .caps{
@@ -741,6 +753,14 @@ a{
 .skill-subHeading p{
     margin:15px 0;
 }
+.skills-container{
+  text-align: center;
+
+  justify-content: center;
+}
+i.fa-brands.fa-github{
+  color:white;
+}
 
 @media (max-width: 1200px) {
   .skills-container{
@@ -749,8 +769,8 @@ a{
     gap: 20px;
     width: 100%;
     margin:3rem 3rem ;
-    text-align: left;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
   }
   /* .hero-section{
     display: flex;
@@ -763,11 +783,11 @@ a{
   } */
   .skill-container-left{
     width: fit-content;
-    text-align: left;
+    /* text-align: left; */
   }
   .skill-container-right{
     width: fit-content;
-    text-align: left;
+    /* text-align: left; */
     margin-left:  0;
   }
   .hero-section-description {
@@ -785,12 +805,12 @@ a{
   background-color: rgb(231, 231, 231);
 }
 .contactus-heading{
-  font-size: 5em;
+  font-size: 60px;
   color: var(--bgOrange);
   padding-top: 2rem;
 }
 .contactus-sub-heading{
-  font-size: 2em;
+  font-size: 30px;
   color: #343d68aa;
   text-transform: capitalize;
 }
@@ -846,20 +866,43 @@ footer{
   padding:5rem;
 }
 .footer-wrapper{
+  width: 100%;
   display: flex;
+  flex-direction: row;
   gap: 1rem;
   padding: 1.2rem;
   justify-content: space-between;
   align-items: center;
+  margin-right: 40px;
+
 }
+                 .footer-div {
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-between;
+                    /* Space between the elements */
+                  align-items: flex-end;
+                  bottom:0;
+                  position: absolute;
+                }
 .footer-faded-text{
-  position: absolute;
   left: 0;
   bottom: 0;
   color: #535287;
   user-select:none;
   font-size: 3rem;
 }
+.footer-copyright{
+      left: 0;
+      bottom: -200px;
+      color: #000;
+      user-select: none;
+      font-size: 10px;
+} 
+
+
+
+
 .link-wrapper{
   display: flex;
   gap: 1.2rem;
@@ -874,16 +917,18 @@ footer{
 }
 
 .icon-wrapper{
-  display: flex;
-  gap: 2rem;
+  width:40%;
+  display:flex;
 }
 .icon-wrapper i{
   color: white;
-  font-size: 2em;
+  font-size: 30px;
+  margin-right: 30px;
+
 }
 .icon-wrapper i:hover{
   color: var(--bgOrange);
-  font-size: 23px;
+  font-size: 33px;
 }
 
 @media (max-width: 1200px) {
@@ -892,6 +937,7 @@ footer{
     align-items:flex-start;
     gap: 2em;
 }
+
 
 .footer-faded-text {
     font-size: 1.5rem;
@@ -989,7 +1035,7 @@ button:hover {
       overflow-x:inherit;
     }
     .hero-section-heading{
-      font-weight: 500;
+      font-weight: 400;
     }
     .user-image {
       padding: 1.5rem;
@@ -1028,6 +1074,49 @@ button:hover {
             /* user-select: none; */
       overflow-y: auto;
       opacity: 0.4;
+    }
+    .nav-items {
+      display: flex;
+      gap: 1.5rem;
+      padding: 0 3rem;
+    }
+                                            
+    .nav-items div {
+      font-size: 14px;
+    }
+                                            
+    .hero-section-heading {
+      font-size: 20px;
+      color: #343d68;
+      font-weight: 400px;
+    }
+                                            
+    .hero-section-description {
+      margin-top: 1rem;
+      font-weight: 400;
+      line-height: 20px;
+      align-content: flex-start;
+      overflow-x: auto;
+      max-width: 20%;
+    }
+        .role {
+          color: #4e45d5;
+          font-weight: 800px;
+          font-size: 20px;
+        }
+    .hero-section-description{
+      max-width: 30%;
+    }
+    .contactus-heading {
+      font-size: 3em;
+      color: var(--bgOrange);
+      padding-top: 2rem;
+    }
+                        
+    .contactus-sub-heading {
+      font-size: 1.5em;
+      color: #343d68aa;
+      text-transform: capitalize;
     }
   }
 
@@ -1102,18 +1191,7 @@ button:hover {
                       font-size: 12px;
                       font-style: italic;
           }
-          
-                    .contactus-heading {
-                      font-size: 3em;
-                      color: var(--bgOrange);
-                      padding-top: 2rem;
-                    }
-          
-                    .contactus-sub-heading {
-                      font-size: 1.5em;
-                      color: #343d68aa;
-                      text-transform: capitalize;
-                    }
+    
           
                     .contactus-form-container {
                       margin-top: 15px;
@@ -1129,6 +1207,7 @@ button:hover {
                       width: 80%;
                       margin: 2rem 5rem;
                     }
+
           
                     .formfield-container {
                       width: 100%;
@@ -1150,6 +1229,30 @@ button:hover {
                       height: auto;
                       padding-top: 1rem;
                     }
+                    .link-wrapper{
+                      width: 60%;
+                      text-align:justify;
+                      justify-content: flex-start;
+                      margin-left: -3%;
+                    }
+                    .icon-wrapper {
+                      width: 40%;
+                      display: flex;
+                      margin-left: -2%;
+                    }
+                    
+                    .icon-wrapper i {
+                      color: white;
+                      font-size: 16px;
+                      margin-right: 10px;
+                      padding-right: 8px;
+                    
+                    }
+                    
+                    .icon-wrapper i:hover {
+                      color: var(--bgOrange);
+                      font-size: 20px;
+                    }
           
                     #submit {
                       border: none;
@@ -1165,6 +1268,12 @@ button:hover {
                       padding: 0 1rem;
                       font-size: 1rem;
                     }
+                    .hero-section{
+                      text-align: left;
+                      margin-left: 10px;
+                    }
+         
+                                       
     }
 
 
