--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,7 @@
 
 *{
     margin:0;
+    margin-left: 0.2%;
     padding:0;
     box-sizing: border-box;
     font-family: "Be Vietnam Pro",sans-serif;
